# bevy_gearbox

./: .gitignore  Cargo.toml  DOCS.md  MIGRATION.md  README.md  build.rs
.cargo/: config.toml
assets/: app_state.sm.ron  repeater.scn.ron  repeater.sm.ron
crates/: notes.md
crates/bevy_gearbox_core/: Cargo.toml
crates/bevy_gearbox_core/src/: active.rs  commands.rs  lib.rs  parameter.rs  prelude.rs  registration.rs  server.rs  state_component.rs  transitions.rs
crates/bevy_gearbox_editor/: Cargo.toml  plan.md
crates/bevy_gearbox_editor/src/: client.rs  component.rs  connection.rs  lib.rs  main.rs  model.rs  net.rs  persistence.rs  plugin.rs  rpcs.rs  types.rs  util.rs
crates/bevy_gearbox_editor/src/editor/: adapter.rs  canvas.rs  context_menu.rs  layout.rs  mod.rs  view.rs  view_model.rs  workspace.rs
crates/bevy_gearbox_editor/src/editor/actions/: mod.rs
crates/bevy_gearbox_editor/src/editor/model/: mod.rs  selection.rs  store.rs  types.rs
crates/bevy_gearbox_editor/src/editor/panels/: connection.rs  explorer.rs  mod.rs
crates/bevy_gearbox_editor/src/editor/shell/: layout.rs
crates/bevy_gearbox_macros/: Cargo.toml
crates/bevy_gearbox_macros/src/: lib.rs
crates/bevy_gearbox_protocol/: Cargo.toml
crates/bevy_gearbox_protocol/src/: client.rs  components.rs  events.rs  lib.rs  methods.rs  server.rs
crates/bevy_gearbox_schedule/: Cargo.toml
crates/bevy_gearbox_schedule/benches/: schedule_bench.rs
crates/bevy_gearbox_schedule/examples/: schedule_stress.rs
crates/bevy_gearbox_schedule/src/: commands.rs  compat.rs  components.rs  delay.rs  history.rs  lib.rs  messages.rs  registration.rs  resolve.rs  state_component.rs
crates/core/: Cargo.toml
crates/core/src/: commands.rs  components.rs  delay.rs  gauge.rs  helpers.rs  lib.rs  messages.rs  parameters.rs  prelude.rs  registration.rs  resolve.rs  state_component.rs
crates/editor/: Cargo.toml
crates/editor/src/: model.rs  persistence.rs  plugin.rs  util.rs
crates/editor/src/editor/: adapter.rs  auto_layout.rs  canvas.rs  context_menu.rs  docs.rs  layout.rs  mod.rs  view.rs  view_model.rs  workspace.rs
crates/editor/src/editor/model/: store.rs  types.rs
crates/editor/src/editor/panels/: connection.rs  explorer.rs
crates/editor/src/editor/shell/: layout.rs
crates/legacy/: Cargo.toml
crates/legacy/src/: bevy_state.rs  guards.rs  lib.rs  prelude.rs  transitions.rs
crates/legacy_macros/: Cargo.toml
crates/legacy_macros/src/: lib.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: client.rs  components.rs  server.rs
examples/: app_state.rs  custom_payload.rs  door.rs  repeater.rs
src/: active.rs  builder.rs  lib.rs  parameter.rs  prelude.rs  registration.rs  server.rs  state_component.rs  transitions.rs
tests/: bevy_state.rs  delay.rs  delayed_message_edge.rs  history.rs  init_stress.rs  messages.rs  multiple_machines.rs  parallel_regions.rs  parameter.rs  parameters.rs  state_components.rs  state_machine.rs  terminal_state.rs  transition_resolution.rs
