[package]
name = "bevy_gearbox"
version = "0.5.2"
edition = "2021"
description = "State machine system for the bevy game engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DEMIURGE-studio/bevy_gearbox"
homepage = "https://github.com/DEMIURGE-studio/bevy_gearbox"
readme = "README.md"
keywords = ["bevy", "state-machine", "gamedev", "ecs"]
categories = ["game-development", "game-engines"]

[lib]
name = "bevy_gearbox"
path = "src/lib.rs"

[workspace]
members = [
  "crates/bevy_gearbox_core",
  "crates/bevy_gearbox_editor",
  "crates/bevy_gearbox_macros", 
  "crates/bevy_gearbox_protocol",
]
resolver = "3"

[dependencies]
bevy = { version = "0.18", default-features = false, features = ["bevy_state"] }
bevy_gearbox_core = { version = "0.5.1", path = "./crates/bevy_gearbox_core" }
bevy_gearbox_protocol = { version = "0.5", path = "./crates/bevy_gearbox_protocol", features = ["server"], optional = true }
inventory = "0.3.21"
rustversion = "1"

[dev-dependencies]
bevy = "0.18"
bevy_gearbox_protocol = { version = "0.5", path = "./crates/bevy_gearbox_protocol", features = ["server"] }

[features]
default = ["server"]
protocol = ["dep:bevy_gearbox_protocol"]
server = ["protocol", "bevy_gearbox_protocol/server"]

[build-dependencies]
rustc_version = "0.4"

[[example]]
name = "repeater"
path = "examples/repeater.rs"
required-features = ["server"]

[[example]]
name = "door"
path = "examples/door.rs"
required-features = ["server"]

[[example]]
name = "custom_payload"
path = "examples/custom_payload.rs"
required-features = ["server"]

[[example]]
name = "app_state"
path = "examples/app_state.rs"
required-features = ["server"]
