[package]
name = "bevy_gearbox"
version = "0.6.0"
edition = "2021"
description = "State machine system for the bevy game engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DEMIURGE-studio/bevy_gearbox"
homepage = "https://github.com/DEMIURGE-studio/bevy_gearbox"
readme = "README.md"
keywords = ["bevy", "state-machine", "gamedev", "ecs"]
categories = ["game-development", "game-engines"]

[lib]
name = "bevy_gearbox"
path = "src/lib.rs"

[workspace]
members = [
  "crates/core",
  "crates/legacy",
  "crates/macros",
  "crates/protocol",
]
resolver = "3"

[dependencies]
bevy = { version = "0.18", default-features = false, features = ["bevy_state"] }
bevy_gearbox_core = { version = "0.5.1", path = "./crates/legacy" }
bevy_gearbox_schedule = { version = "0.2.0", path = "./crates/core" }
bevy_gearbox_macros = { version = "0.6.0", path = "./crates/macros" }
bevy_gearbox_protocol = { version = "0.5", path = "./crates/protocol", features = ["server"], optional = true }
inventory = "0.3.21"
rustversion = "1"

[dev-dependencies]
bevy = "0.18"
bevy_gearbox_protocol = { version = "0.5", path = "./crates/protocol", features = ["server"] }
criterion = "0.5"

[features]
default = ["server"]
protocol = ["dep:bevy_gearbox_protocol"]
server = ["protocol", "bevy_gearbox_protocol/server"]
trace_tracy = ["bevy/trace_tracy"]
debug = ["bevy/debug"]

[build-dependencies]
rustc_version = "0.4"

[[bench]]
name = "observer_bench"
harness = false

[[example]]
name = "door"
path = "examples/door.rs"
required-features = ["server"]

[[example]]
name = "custom_payload"
path = "examples/custom_payload.rs"
required-features = ["server"]

[[example]]
name = "app_state"
path = "examples/app_state.rs"
required-features = ["server"]