[package]
name = "bevy_gearbox"
version = "0.7.0"
edition = "2021"
description = "State machine system for the bevy game engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DEMIURGE-studio/bevy_gearbox"
homepage = "https://github.com/DEMIURGE-studio/bevy_gearbox"
readme = "README.md"
keywords = ["bevy", "state-machine", "gamedev", "ecs"]
categories = ["game-development", "game-engines"]

[lib]
name = "bevy_gearbox"
path = "src/lib.rs"

[workspace]
members = [
  "crates/core",
  "crates/editor",
  "crates/macros",
  "crates/protocol",
]
resolver = "3"

[workspace.dependencies]
bevy = { version = "0.19.0", default-features = false }

[dependencies]
bevy = { workspace = true, features = ["bevy_state"] }
bevy_gearbox_core = { version = "0.7.0", path = "./crates/core" }
bevy_gearbox_macros = { version = "0.7.0", path = "./crates/macros" }
bevy_gearbox_protocol = { version = "0.7.0", path = "./crates/protocol", features = ["server"], optional = true }
inventory = "0.3.21"
rustversion = "1"

[dev-dependencies]
bevy = { workspace = true, features = ["default"] }
bevy_gearbox_protocol = { version = "0.7", path = "./crates/protocol", features = ["server"] }
criterion = "0.5"

[features]
default = ["server"]
gauge = ["bevy_gearbox_core/gauge"]
protocol = ["dep:bevy_gearbox_protocol"]
server = ["protocol", "bevy_gearbox_protocol/server"]
trace_tracy = ["bevy/trace_tracy"]
debug = ["bevy/debug"]

[build-dependencies]
rustc_version = "0.4"
