[package]
name = "bevy_gearbox_editor"
version = "0.5.0"
edition = "2021"
description = "State machine system for the bevy game engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DEMIURGE-studio/bevy_gearbox_editor"
homepage = "https://github.com/DEMIURGE-studio/bevy_gearbox_editor"
keywords = ["bevy", "state-machine", "gamedev", "ecs"]
categories = ["game-development", "game-engines"]

[dependencies]
bevy = "0.17.2"
bevy_egui = "0.38.0"
hex = "0.4.3"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3.30"
rfd = "0.15.4"
ron = "0.11.0"
serde = "1.0.228"
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
ureq = { version = "3.1.2", features = ["json"] }
