[package]
name = "bevy_gearbox_core"
version = "0.6.0"
edition = "2021"
description = "Core state machine library for bevy_gearbox"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DEMIURGE-studio/bevy_gearbox"
homepage = "https://github.com/DEMIURGE-studio/bevy_gearbox"
keywords = ["bevy", "state-machine", "gamedev", "ecs"]
categories = ["game-development", "game-engines"]

[lib]
name = "bevy_gearbox_core"
path = "src/lib.rs"

[dependencies]
bevy = { version = "0.18", default-features = false, features = ["bevy_state", "bevy_log"] }
inventory = "0.3"
bevy_gauge = { version = "0.4.5", optional = true }

[dev-dependencies]
criterion = "0.5"

[features]
default = []
gauge = ["dep:bevy_gauge"]
trace_tracy = ["bevy/trace_tracy"]
debug = ["bevy/debug"]
