[package]
name = "bevy_gearbox_editor"
version = "0.7.0"
edition = "2021"
description = "Visual editor for bevy_gearbox"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DEMIURGE-studio/bevy_gearbox"
homepage = "https://github.com/DEMIURGE-studio/bevy_gearbox"
keywords = ["bevy", "state-machine", "gamedev", "ecs"]
categories = ["game-development", "game-engines"]

[dependencies]
bevy = { workspace = true, features = [
    "bevy_asset",
    "bevy_camera",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_shader",
    "bevy_window",
    "bevy_winit",
] }
bevy_egui = "0.40.0"
bevy_gearbox_protocol = { version = "0.7", path = "../protocol", features = ["server"] }
hex = "0.4.3"
rfd = "0.15.4"
ron = "0.11.0"
serde = "1.0.228"
serde_json = "1.0.145"
sha2 = "0.10.9"
