[package]
name = "bevy_gearbox_core"
version = "0.5.1"
edition = "2021"
description = "State machine system for the bevy game engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DEMIURGE-studio/bevy_gearbox"
homepage = "https://github.com/DEMIURGE-studio/bevy_gearbox"
keywords = ["bevy", "state-machine", "gamedev", "ecs"]
categories = ["game-development", "game-engines"]

[lib]
name = "bevy_gearbox_core"
path = "src/lib.rs"

[dependencies]
bevy = { version = "0.18", default-features = false, features = ["bevy_state"] }
bevy_gearbox_legacy_macros = { version = "0.4.0", path = "../legacy_macros" }
inventory = "0.3.21"
rustversion = "1"

[dev-dependencies]
bevy = "0.18"

[features]
default = []

[build-dependencies]
rustc_version = "0.4"
