[package]
name = "bevy_gearbox_macros"
version = "0.6.0"
edition = "2021"
description = "Derive macros for bevy_gearbox (schedule-based API)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DEMIURGE-studio/bevy_diesel"
homepage = "https://github.com/DEMIURGE-studio/bevy_diesel"
keywords = ["bevy", "macros", "state-machine", "gamedev"]
categories = ["game-development", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
