[package]
name = "bevy_gearbox_protocol"
version = "0.5.1"
edition = "2021"
description = "Protocol (client/server) for Bevy Gearbox editor/app communication"
license = "MIT OR Apache-2.0"

[features]
default = ["client"]
client = []
server = ["bevy/bevy_remote", "bevy/bevy_scene", "dep:bevy_gearbox"]

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "bevy_remote",
    "bevy_log",
] }
bevy_gearbox = { package = "bevy_gearbox_core", version = "0.5.0", path = "../legacy", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3.30"
thiserror = "1.0.65"
walkdir = "2.5.0"

