[package]
name = "bevy_gearbox_protocol"
version = "0.6.0"
edition = "2021"
description = "Protocol (client/server) for Bevy Gearbox editor/app communication"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DEMIURGE-studio/bevy_gearbox"
homepage = "https://github.com/DEMIURGE-studio/bevy_gearbox"
keywords = ["bevy", "state-machine", "gamedev", "ecs"]
categories = ["game-development", "game-engines"]

[features]
default = ["client"]
client = []
server = ["bevy/bevy_remote", "bevy/bevy_world_serialization", "dep:bevy_gearbox"]

[dependencies]
bevy = { workspace = true, features = [
    "bevy_remote",
    "bevy_log",
] }
bevy_gearbox = { package = "bevy_gearbox_core", version = "0.6.0", path = "../core", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3.30"
thiserror = "1.0.65"
walkdir = "2.5.0"

